<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:transitionName="@string/transition_string"

    >

    <GridLayout
        android:id="@+id/health_grid"
        android:columnCount="2"
        android:rowCount="4"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- ROW 1 -->

        <!-- COLUMN 1 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/diagnostics"/>

                <TextView
                    android:ellipsize="middle"
                    android:gravity="center"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/vse_health_diagnostics"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- COLUMN 2 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/tooth"/>

                <TextView
                    android:ellipsize="middle"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    android:text="@string/vse_health_stomatology"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 2 -->

        <!-- COLUMN 1 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/plastics"/>

                <TextView
                    android:autoSizeMaxTextSize="14sp"
                    android:ellipsize="middle"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:text="@string/vse_health_plastics"
                    tools:targetApi="o" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- COLUMN 2 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/wine"/>

                <TextView
                    android:ellipsize="middle"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:gravity="center"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:text="@string/vse_health_narco"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 3 -->

        <!-- COLUMN 1 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/psychology"/>

                <TextView

                    android:ellipsize="middle"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/vse_health_psychology"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- COLUMN 2 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/eyeglasses"/>

                <TextView
                    android:ellipsize="middle"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/vse_health_optics"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ROW 4 -->

        <!-- COLUMN 1 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="1.2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/health"/>

                <TextView
                    android:ellipsize="middle"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/vse_health_veterinar"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <!-- COLUMN 2 -->
        <android.support.v7.widget.CardView
            tools:targetApi="lollipop"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:stateListAnimator="@anim/animation"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="11dp"
            android:layout_marginRight="11dp"
            android:layout_marginLeft="11dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="8dp"
                android:orientation="vertical"

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_weight="1.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ellipsis"/>

                <TextView
                    android:ellipsize="middle"
                    style="@android:style/TextAppearance.DeviceDefault"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/main_other"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </GridLayout>

</LinearLayout>